# Garmin2eFB

./: Exporter.py  GarminEntry.py  Gui.py  Main.py  README.md  config.ini  export_garmin.csv  import_efb.csv  makecsv.py  pyproject.toml
